--- a/meta_rzg1/hmi_demo/template/skrzg1m/bblayers.conf
+++ b/meta_rzg1/hmi_demo/template/skrzg1m/bblayers.conf
@@ -14,6 +14,8 @@ BBLAYERS ?= " \
   ${TOPDIR}/../meta-openembedded/meta-oe \
   ${TOPDIR}/../meta-openembedded/meta-multimedia \
   ${TOPDIR}/../meta-linaro/meta-linaro-toolchain \
+  ${TOPDIR}/../meta-qt5 \
+  ${TOPDIR}/../meta-rzg-demos/meta_rzg1/common \
   ${TOPDIR}/../meta-rzg-demos/meta_rzg1/hmi_demo \
   "
 BBLAYERS_NON_REMOVABLE ?= " \
