hmi-demo: add Demo3D on weston taskbar
this patch add an icon of Demo3D on weston taskbar

Signed-off-by: Binh Nguyen <binh.nguyen.jy@renesas.com>

--- a/meta_rzg1/hmi_demo/recipes-graphics/files/weston.ini
+++ b/meta_rzg1/hmi_demo/recipes-graphics/files/weston.ini
@@ -38,3 +38,7 @@ path=/home/root/launcher-taskbar/hmi-scripts/ip_show
 [launcher]
 icon=/home/root/launcher-taskbar/hmi-icons/Exit.png
 path=/home/root/launcher-taskbar/hmi-scripts/Exit.sh
+
+[launcher]
+icon=/home/root/launcher-taskbar/hmi-icons/Demo3D.png
+path=/home/root/launcher-taskbar/hmi-scripts/Demo3D.sh
