--- a/meta-rzg1/doorphone/template/iwg20m/local-r8a7743.conf
+++ b/meta-rzg1/doorphone/template/iwg20m/local-r8a7743.conf
@@ -60,6 +60,9 @@ PARALLEL_MAKE ?= "-j ${@oe.utils.cpu_count()}"
 # This sets the default machine to be qemux86 if no other machine is selected:
 MACHINE ??= "iwg20m"
 
+# This set the series of chip for rzg1 & recipes can seletect suitable patch to apply
+SOC_FAMILY = "rzg1:r8a7743"
+
 #
 # Where to place downloads
 #
