Fix mistake in directories name
The last commit change the directories name but not complete.
This patch fix it.

Signed-off-by: Hung Tran <hung.tran.jy@rvc.renesas.com>

--- a/meta-rzg1/hmi-demo/template/iwg20m/bblayers.conf
+++ b/meta-rzg1/hmi-demo/template/iwg20m/bblayers.conf
@@ -9,14 +9,13 @@ BBLAYERS ?= " \
   ${TOPDIR}/../poky/meta \
   ${TOPDIR}/../poky/meta-yocto \
   ${TOPDIR}/../poky/meta-yocto-bsp \
+  ${TOPDIR}/../meta-renesas \
   ${TOPDIR}/../meta-renesas/meta-rzg1 \
   ${TOPDIR}/../meta-openembedded/meta-oe \
   ${TOPDIR}/../meta-openembedded/meta-multimedia \
-  ${TOPDIR}/../meta-openembedded/meta-ruby \
   ${TOPDIR}/../meta-linaro/meta-linaro-toolchain \
-  ${TOPDIR}/../meta-qt5 \
   ${TOPDIR}/../meta-rzg-demos/meta-rzg1/common \
-  ${TOPDIR}/../meta-rzg-demos/meta-rzg1/qt-hmi-demo \
+  ${TOPDIR}/../meta-rzg-demos/meta-rzg1/hmi-demo \
   "
 BBLAYERS_NON_REMOVABLE ?= " \
   ${TOPDIR}/../poky/meta \
