- Add meta-openembedded/meta-networking layer
Signed-off-by: Hung Dong <hung.dong.xd@rvc.renesas.com>

--- a/meta-rzg1/doorphone/template/iwg20m-rzg1m/bblayers.conf
+++ b/meta-rzg1/doorphone/template/iwg20m-rzg1m/bblayers.conf
@@ -13,6 +13,7 @@ BBLAYERS ?= " \
   ${TOPDIR}/../meta-renesas/meta-rzg1 \
   ${TOPDIR}/../meta-openembedded/meta-oe \
   ${TOPDIR}/../meta-openembedded/meta-multimedia \
+  ${TOPDIR}/../meta-openembedded/meta-networking \
   ${TOPDIR}/../meta-openembedded/meta-ruby \
   ${TOPDIR}/../meta-linaro/meta-linaro-toolchain \
   ${TOPDIR}/../meta-qt5 \
