--- a/meta-rzg1/hmi-demo/template/iwg20m-rzg1m/bblayers.conf
+++ b/meta-rzg1/hmi-demo/template/iwg20m-rzg1m/bblayers.conf
@@ -13,6 +13,7 @@ BBLAYERS ?= " \
   ${TOPDIR}/../meta-renesas/meta-rzg1 \
   ${TOPDIR}/../meta-openembedded/meta-oe \
   ${TOPDIR}/../meta-openembedded/meta-multimedia \
+  ${TOPDIR}/../meta-openembedded/meta-networking \
   ${TOPDIR}/../meta-linaro/meta-linaro-toolchain \
   ${TOPDIR}/../meta-rzg-demos/meta-rzg1/common \
   ${TOPDIR}/../meta-rzg-demos/meta-rzg1/hmi-demo \
