qt-hmi-demo: Update template for qt-hmi-demo
Correct content of bblayers.conf file
Config: setting for u-boot Wayland and choose graphic environment in local.conf

Signed-off-by: Quoc Ngo <quoc.ngo.wz@rvc.renesas.com>

--- a/meta-rzg1/qt-hmi-demo/template/iwg20m/bblayers.conf
+++ b/meta-rzg1/qt-hmi-demo/template/iwg20m/bblayers.conf
@@ -9,7 +9,6 @@ BBLAYERS ?= " \
   ${TOPDIR}/../poky/meta \
   ${TOPDIR}/../poky/meta-yocto \
   ${TOPDIR}/../poky/meta-yocto-bsp \
-  ${TOPDIR}/../meta-renesas \
   ${TOPDIR}/../meta-renesas/meta-rzg1 \
   ${TOPDIR}/../meta-openembedded/meta-oe \
   ${TOPDIR}/../meta-openembedded/meta-multimedia \
@@ -17,6 +16,7 @@ BBLAYERS ?= " \
   ${TOPDIR}/../meta-linaro/meta-linaro-toolchain \
   ${TOPDIR}/../meta-qt5 \
   ${TOPDIR}/../meta-rzg-demos/meta-rzg1/common \
+  ${TOPDIR}/../meta-rzg-demos/meta-rzg1/qt-hmi-demo/qt-framework \
   ${TOPDIR}/../meta-rzg-demos/meta-rzg1/qt-hmi-demo \
   "
 BBLAYERS_NON_REMOVABLE ?= " \
