--- a/meta-rzg1/qt-hmi-demo/template/iwg20m/local.conf
+++ b/meta-rzg1/qt-hmi-demo/template/iwg20m/local.conf
@@ -311,6 +311,9 @@ PREFERRED_PROVIDER_virtual/mesa = ""
 PREFERRED_PROVIDER_libgbm = "libgbm"
 PREFERRED_PROVIDER_libgbm-dev = "libgbm"
 
+# Setting for u-boot Wayland
+UBOOT_MACHINE = "iwg20m_q7_config"
+
 # Addtional Configurations of Optional OMX modules
 
 # OMX Media Component H263 Decoder Library
@@ -361,5 +364,9 @@ PREFERRED_PROVIDER_libgbm-dev = "libgbm"
 #DISTRO_FEATURES_append = " aacsdec_mdw"
 # ARM AAC Encode Middleware for Linux
 #DISTRO_FEATURES_append = " aacenc_mdw"
+
+# Choose graphic environment:
+DISTRO_FEATURES_remove = "x11"
+DISTRO_FEATURES_append = " wayland"
 
 TOOLCHAIN_HOST_TASK_append = " nativesdk-qtbase-tools nativesdk-packagegroup-qt5-toolchain-host"
