--- a/meta-rzg1/common/conf/layer.conf
+++ b/meta-rzg1/common/conf/layer.conf
@@ -1,5 +1,5 @@
 # We have a conf and classes directory, append to BBPATH
-BBPATH .= ":${LAYERDIR}"
+BBPATH .= ":${LAYERDIR}:${LAYERDIR}/recipes-images/"
 
 # We have a recipes directory, add to BBFILES
 BBFILES += " \
