--- a/meta-rzg1/hmi-demo/template/iwg20m/local.conf
+++ b/meta-rzg1/hmi-demo/template/iwg20m/local.conf
@@ -311,7 +311,8 @@ PREFERRED_PROVIDER_virtual/mesa = ""
 PREFERRED_PROVIDER_libgbm = "libgbm"
 PREFERRED_PROVIDER_libgbm-dev = "libgbm"
 
-# Addtional Configurations of Optional OMX modules
+# Setting for u-boot Wayland
+UBOOT_MACHINE = "iwg20m_q7_config"
 
 # OMX Media Component H263 Decoder Library
 #DISTRO_FEATURES_append = " h263dec_lib"
@@ -365,3 +366,6 @@ DISTRO_FEATURES_append = " h264avcenc_lib"
 TOOLCHAIN_HOST_TASK_append = " nativesdk-python-subprocess nativesdk-python-logging nativesdk-python-shell nativesdk-python-datetime nativesdk-python-multiprocessing nativesdk-python-netclient"
 
 IMAGE_INSTALL_append = " libpng12"
+#Graphic environment
+DISTRO_FEATURES_remove = "x11"
+DISTRO_FEATURES_append = " wayland"
