--- a/meta-rzg1/hmi-demo/recipes-graphics/weston-init/weston.ini
+++ b/meta-rzg1/hmi-demo/recipes-graphics/weston-init/weston.ini
@@ -29,6 +29,10 @@ icon=/home/root/launcher-taskbar/hmi-icons/Glmask3D-Demo.png
 path=/home/root/launcher-taskbar/hmi-scripts/Glmask3D_Demo.sh
 
 [launcher]
+icon=/home/root/launcher-taskbar/hmi-icons/Demo3D.png
+path=/home/root/launcher-taskbar/hmi-scripts/Demo3D.sh
+
+[launcher]
 icon=/home/root/launcher-taskbar/hmi-icons/IP-show.png
 path=/home/root/launcher-taskbar/hmi-scripts/ip_show
 
