--- a/meta-rzg1/hmi-demo/template/iwg22m/local.conf
+++ b/meta-rzg1/hmi-demo/template/iwg22m/local.conf
@@ -312,7 +312,7 @@ PREFERRED_PROVIDER_libgbm = "libgbm"
 PREFERRED_PROVIDER_libgbm-dev = "libgbm"
 
 # Setting for u-boot Wayland
-UBOOT_MACHINE = "iwg20m_q7_config"
+UBOOT_MACHINE = "iwg22m_sm_config"
 
 # OMX Media Component H263 Decoder Library
 #DISTRO_FEATURES_append = " h263dec_lib"
