--- a/meta-rzg1/hmi-demo/template/iwg20m/local.conf
+++ b/meta-rzg1/hmi-demo/template/iwg20m/local.conf
@@ -323,3 +323,6 @@ IMAGE_INSTALL_append = " libpng12"
 #Graphic environment
 DISTRO_FEATURES_remove = "x11"
 DISTRO_FEATURES_append = " wayland"
+
+# remove bluez5 to use bluez4
+DISTRO_FEATURES_BACKFILL_CONSIDERED = "bluez5"
