--- a/meta-rzg1/qt-hmi-demo/qt-framework/template/iwg22m/local.conf
+++ b/meta-rzg1/qt-hmi-demo/qt-framework/template/iwg22m/local.conf
@@ -369,4 +369,7 @@ UBOOT_MACHINE = "iwg22m_q7_config"
 DISTRO_FEATURES_remove = "x11"
 DISTRO_FEATURES_append = " wayland"
 
+# remove bluez5 to use bluez4
+DISTRO_FEATURES_BACKFILL_CONSIDERED = "bluez5"
+
 TOOLCHAIN_HOST_TASK_append = " nativesdk-qtbase-tools nativesdk-packagegroup-qt5-toolchain-host"
