--- a/meta-rzg1/doorphone/template/iwg20m/local.conf
+++ b/meta-rzg1/doorphone/template/iwg20m/local.conf
@@ -323,4 +323,5 @@ DISTRO_FEATURES_append = " h264avcenc_lib"
 DISTRO_FEATURES_remove = "x11"
 DISTRO_FEATURES_append = " wayland"
 
-
+# remove bluez5 to use bluez4
+DISTRO_FEATURES_BACKFILL_CONSIDERED = "bluez5"
