doorphone: template: use bluez5 instead of bluez4 and add systemd to enable bluez service
Signed-off-by: hienhuynh <hien.huynh.px@rvc.renenas.com>

--- a/meta-rzg1/doorphone/template/iwg20m/local.conf
+++ b/meta-rzg1/doorphone/template/iwg20m/local.conf
@@ -323,5 +323,5 @@ DISTRO_FEATURES_append = " h264avcenc_lib"
 DISTRO_FEATURES_remove = "x11"
 DISTRO_FEATURES_append = " wayland"
 
-# remove bluez5 to use bluez4
-DISTRO_FEATURES_BACKFILL_CONSIDERED = "bluez5"
+# Add systemd to enable bluez service
+DISTRO_FEATURES_append = " systemd"
