--- a/meta-rzg1/hmi-demo/template/iwg23s/local.conf
+++ b/meta-rzg1/hmi-demo/template/iwg23s/local.conf
@@ -370,5 +370,5 @@ IMAGE_INSTALL_append = " libpng12"
 DISTRO_FEATURES_remove = "x11"
 DISTRO_FEATURES_append = " wayland"
 
-# remove bluez5 to use bluez4
-DISTRO_FEATURES_BACKFILL_CONSIDERED = "bluez5"
+# Add systemd to enable bluez service
+DISTRO_FEATURES_append = " systemd"
