--- a/meta-rzg1/qt-hmi-demo/qt-framework/template/iwg20m/local.conf
+++ b/meta-rzg1/qt-hmi-demo/qt-framework/template/iwg20m/local.conf
@@ -369,8 +369,8 @@ UBOOT_MACHINE = "iwg20m_q7_config"
 DISTRO_FEATURES_remove = "x11"
 DISTRO_FEATURES_append = " wayland"
 
-# remove bluez5 to use bluez4
-DISTRO_FEATURES_BACKFILL_CONSIDERED = "bluez5"
+# Add systemd to enable bluez service
+DISTRO_FEATURES_append = " systemd"
 
 TOOLCHAIN_HOST_TASK_append = " nativesdk-qtbase-tools nativesdk-packagegroup-qt5-toolchain-host"
 
