--- a/meta-rzg1/hmi-demo/template/iwg21m/local.conf
+++ b/meta-rzg1/hmi-demo/template/iwg21m/local.conf
@@ -1,6 +1,3 @@
-#Mask linaro tc bb due to unnecessaries
-BBMASK ?= "external-linaro-toolchain|binutils_linaro.*"
-
 #
 # This file is your local configuration file and is where all local user settings
 # are placed. The comments in this file give some guide to the options a new user
@@ -59,6 +56,9 @@ PARALLEL_MAKE ?= "-j ${@oe.utils.cpu_count()}"
 #
 # This sets the default machine to be qemux86 if no other machine is selected:
 MACHINE ??= "iwg21m"
+
+# This sets the SoC
+SOC_FAMILY = "r8a7742"
 
 #
 # Where to place downloads
@@ -137,7 +137,7 @@ PACKAGE_CLASSES ?= "package_ipk"
 # you can build the SDK packages for architectures other than the machine you are 
 # running the build on (i.e. building i686 packages on an x86_64 host).
 # Supported values are i686 and x86_64
-SDKMACHINE ?= "x86_64"
+#SDKMACHINE ?= "i686"
 
 #
 # Extra image configuration defaults
@@ -161,7 +161,7 @@ SDKMACHINE ?= "x86_64"
 # There are other application targets that can be used here too, see
 # meta/classes/image.bbclass and meta/classes/core-image.bbclass for more details.
 # We default to enabling the debugging tweaks.
-EXTRA_IMAGE_FEATURES = "debug-tweaks tools-sdk"
+EXTRA_IMAGE_FEATURES ?= "debug-tweaks"
 
 #
 # Additional image features
@@ -212,13 +212,17 @@ PATCHRESOLVE = "noop"
 # shutdown the build. If there is less that 100MB or 1K inodes, perform a hard abort
 # of the build. The reason for this is that running completely out of space can corrupt
 # files and damages the build in ways which may not be easily recoverable.
+# It's necesary to monitor /tmp, if there is no space left the build will fail
+# with very exotic errors.
 BB_DISKMON_DIRS = "\
     STOPTASKS,${TMPDIR},1G,100K \
     STOPTASKS,${DL_DIR},1G,100K \
     STOPTASKS,${SSTATE_DIR},1G,100K \
+    STOPTASKS,/tmp,100M,100K \
     ABORT,${TMPDIR},100M,1K \
     ABORT,${DL_DIR},100M,1K \
-    ABORT,${SSTATE_DIR},100M,1K" 
+    ABORT,${SSTATE_DIR},100M,1K \
+    ABORT,/tmp,10M,1K"
 
 #
 # Shared-state files from other locations
@@ -242,23 +246,36 @@ BB_DISKMON_DIRS = "\
 # Qemu configuration
 #
 # By default qemu will build with a builtin VNC server where graphical output can be
-# seen. The two lines below enable the SDL backend too. This assumes there is a
-# libsdl library available on your build system.
-PACKAGECONFIG_pn-qemu-native = "sdl"
-PACKAGECONFIG_pn-nativesdk-qemu = "sdl"
-ASSUME_PROVIDED += "libsdl-native"
+# seen. The two lines below enable the SDL backend too. By default libsdl-native will
+# be built, if you want to use your host's libSDL instead of the minimal libsdl built
+# by libsdl-native then uncomment the ASSUME_PROVIDED line below.
+PACKAGECONFIG_append_pn-qemu-native = " sdl"
+PACKAGECONFIG_append_pn-nativesdk-qemu = " sdl"
+#ASSUME_PROVIDED += "libsdl-native"
 
 # CONF_VERSION is increased each time build/conf/ changes incompatibly and is used to
 # track the version of this file when it was generated. This can safely be ignored if
 # this doesn't mean anything to you.
 CONF_VERSION = "1"
 
-LICENSE_FLAGS_WHITELIST = "commercial"
+# Add systemd configuration
+#DISTRO_FEATURES_append = " systemd"
+#VIRTUAL-RUNTIME_init_manager = "systemd"
+
+# add the static lib to SDK toolchain
+SDKIMAGE_FEATURES_append = " staticdev-pkgs"
+
+# Disable optee in meta-linaro layer
+BBMASK = "meta-linaro/meta-optee/recipes-security/optee"
+
+# Enable Gfx Pkgs
+MACHINE_FEATURES_append = " rgx"
+MULTI_PROVIDER_WHITELIST += "virtual/libgl virtual/egl virtual/libgles1 virtual/libgles2"
 
 # Define the name of multimedia, dtv, graphic test, multimedia-test for bbmask
 BB_MULTIMEDIA_KERNEL_MODULE = "kernel-module-fdpm|kernel-module-mmngr|\
                                kernel-module-mmngrbuf|kernel-module-s3ctl|\
-                               kernel-module-uvcs|kernel-module-vspm"
+							   kernel-module-uvcs|kernel-module-vspm"
 BB_MULTIMEDIA_USER_MODULE = "fdpm-user-module|mmngr-user-module|\
                              mmngrbuf-user-module|omx-user-module|\
 							 s3ctl-user-module|vspm-user-module|libmemcpy"
@@ -269,40 +286,9 @@ BB_GST_PLUGINS = "meta-renesas/meta-rzg1/recipes-multimedia/gstreamer"
 MULTIMEDIA_BB = "${BB_MULTIMEDIA_KERNEL_MODULE}|${BB_MULTIMEDIA_USER_MODULE}|\
                  ${BB_MULTIMEDIA_TEST_MODULE}|${BB_GST_PLUGINS}"
 
-# Enable Multimedia standard pkg
-MACHINE_FEATURES_append = " multimedia"
-
-# UnMask the multimedia kernel modules
-#BBMASK .= "|${BB_MULTIMEDIA_KERNEL_MODULE}"
-
-# UnMask the multimedia user modules
-#BBMASK .= "|${BB_MULTIMEDIA_USER_MODULE}"
-
-# Include static library in SDK
-SDKIMAGE_FEATURES_append = " staticdev-pkgs"
-
-# Mask the DTV pkgs
-#MACHINE_FEATURES_append = " dtv"
-BBMASK .= "|dtv-module|ssp-module|scu-module"
-
-# Enable graphic pkgs
-#BBMASK .= "|gles-kernel-module|gles-user-module"
-
-# Mask the multimedia-test
-BBMASK .= "|${BB_MULTIMEDIA_TEST_MODULE}"
-
-# Mask the graphic test
-BBMASK .= "|gles-test-module"
-
-#DISTRO_FEATURES_append = " mm-test"
-#DISTRO_FEATURES_append = " gles-test"
-
-# Enable Gfx Pkgs
-MACHINE_FEATURES_append = " sgx"
-MULTI_PROVIDER_WHITELIST += "virtual/libgl virtual/egl virtual/libgles1 virtual/libgles2"
-
 # for Wayland/Weston
-
+DISTRO_FEATURES_NATIVESDK_append = " wayland"
+DISTRO_FEATURES_append = " pam"
 PREFERRED_PROVIDER_virtual/libgles1 = ""
 PREFERRED_PROVIDER_virtual/libgles2 = "gles-user-module"
 PREFERRED_PROVIDER_virtual/egl = "libegl"
@@ -310,19 +296,42 @@ PREFERRED_PROVIDER_virtual/libgl = ""
 PREFERRED_PROVIDER_virtual/mesa = ""
 PREFERRED_PROVIDER_libgbm = "libgbm"
 PREFERRED_PROVIDER_libgbm-dev = "libgbm"
+BBMASK .= "|mesa-gl"
+
+# Enable Multimedia features
+MACHINE_FEATURES_append = " multimedia"
+
+# Add for gstreamer plugins ugly
+LICENSE_FLAGS_WHITELIST = "commercial"
 
 # Setting for u-boot Wayland
 UBOOT_MACHINE = "iwg21m_q7_config"
 
+# Addtional Configurations of Optional OMX modules
+
 # Encoder Library for Linux
 DISTRO_FEATURES_append = " h264avcenc_lib"
 
-TOOLCHAIN_HOST_TASK_append = " nativesdk-python-subprocess nativesdk-python-logging nativesdk-python-shell nativesdk-python-datetime nativesdk-python-multiprocessing nativesdk-python-netclient"
-
-IMAGE_INSTALL_append = " libpng12"
-#Graphic environment
+# Choose graphic environment:
 DISTRO_FEATURES_remove = "x11"
 DISTRO_FEATURES_append = " wayland"
 
-# Add systemd to enable bluez service
-DISTRO_FEATURES_append = " systemd"
+# Select the compiler version Linaro GCC 7.2.
+#   Note: To change to default version GCC 7.3 in poky, remove below settings
+GCCVERSION = "linaro-7.2"
+SDKGCCVERSION = "${GCCVERSION}"
+
+# Select CIP-Core packages version.
+#    Note: To change to default version in poky:
+#         1) First remove BINUVERSION, GLIBCVERSION, and
+#            PREFERRED_VERSION_nativesdk-glibc-locale settings here
+#            (Poky will build binutils 2.29 and glibc version 2.26)
+#         2) Then uncomment below settings for
+#            PREFERRED_VERSION_busybox and PREFERRED_VERSION_openssl
+BINUVERSION = "2.25"
+GLIBCVERSION = "2.26"
+PREFERRED_VERSION_nativesdk-glibc-locale = "${GLIBCVERSION}"
+#PREFERRED_VERSION_busybox = "1.24"
+#PREFERRED_VERSION_openssl = "1.0.2n"
+
+TOOLCHAIN_HOST_TASK_append = " nativesdk-python-subprocess nativesdk-python-logging nativesdk-python-shell nativesdk-python-datetime nativesdk-python-multiprocessing nativesdk-python-netclient"
