--- a/meta-rzg1/hmi-demo/template/iwg22m/bblayers.conf
+++ b/meta-rzg1/hmi-demo/template/iwg22m/bblayers.conf
@@ -1,21 +1,26 @@
 # LAYER_CONF_VERSION is increased each time build/conf/bblayers.conf
 # changes incompatibly
-LCONF_VERSION = "6"
+LCONF_VERSION = "7"
 
 BBPATH = "${TOPDIR}"
 BBFILES ?= ""
 
 BBLAYERS ?= " \
   ${TOPDIR}/../poky/meta \
-  ${TOPDIR}/../poky/meta-yocto \
+  ${TOPDIR}/../poky/meta-poky \
   ${TOPDIR}/../poky/meta-yocto-bsp \
   ${TOPDIR}/../meta-renesas/meta-rzg1 \
+  ${TOPDIR}/../meta-linaro/meta-linaro-toolchain \
+  ${TOPDIR}/../meta-linaro/meta-optee \
   ${TOPDIR}/../meta-openembedded/meta-oe \
   ${TOPDIR}/../meta-openembedded/meta-multimedia \
-  ${TOPDIR}/../meta-linaro/meta-linaro-toolchain \
+  ${TOPDIR}/../meta-openembedded/meta-python \
+  ${TOPDIR}/../meta-openembedded/meta-networking \
+  ${TOPDIR}/../meta-qt5 \
   ${TOPDIR}/../meta-rzg-demos/meta-rzg1/common \
   ${TOPDIR}/../meta-rzg-demos/meta-rzg1/hmi-demo \
   "
+
 BBLAYERS_NON_REMOVABLE ?= " \
   ${TOPDIR}/../poky/meta \
   ${TOPDIR}/../poky/meta-yocto \
