--- a/meta-rzg1/hmi-demo/template/iwg20m/local.conf
+++ b/meta-rzg1/hmi-demo/template/iwg20m/local.conf
@@ -338,16 +338,24 @@ GCCVERSION = "linaro-7.2"
 SDKGCCVERSION = "${GCCVERSION}"
 
 # Select CIP-Core packages version.
-#    Note: To change to default version in poky:
-#         1) First remove BINUVERSION, GLIBCVERSION, and
-#            PREFERRED_VERSION_nativesdk-glibc-locale settings here
-#            (Poky will build binutils 2.29 and glibc version 2.26)
-#         2) Then uncomment below settings for
-#            PREFERRED_VERSION_busybox and PREFERRED_VERSION_openssl
+#    Note: To change to default version in poky, revert (comment <-> uncomment)
+#    below settings
 BINUVERSION = "2.25"
-GLIBCVERSION = "2.26"
+PREFERRED_VERSION_nativesdk-binutils = "${BINUVERSION}"
+GLIBCVERSION = "2.19"
 PREFERRED_VERSION_nativesdk-glibc-locale = "${GLIBCVERSION}"
+BBMASK .= "|glibc-mtrace"
+RDEPENDS_${PN}_remove_pn-packagegroup-core-tools-debug = "libc-mtrace"
+DEPENDS_remove_pn-openssh = "openssl10"
+DEPENDS_append_pn-openssh = " openssl"
 #PREFERRED_VERSION_busybox = "1.24"
 #PREFERRED_VERSION_openssl = "1.0.2n"
+#BBMASK .= "|openssl_debian"
 
-TOOLCHAIN_HOST_TASK_append = " nativesdk-python-subprocess nativesdk-python-logging nativesdk-python-shell nativesdk-python-datetime nativesdk-python-multiprocessing nativesdk-python-netclient"
+# Enable Qt framework at default in core-image-weston
+#   Note: To build Qt framework, revert below setting
+ENABLE_QT_FRAMEWORK = "0" 
+
+# Use older version of below tools to workaround a problem in bluetooth transfer
+PREFERRED_VERSION_obexftp = "0.23"
+PREFERRED_VERSION_openobex = "1.5"
