--- a/meta-rzg1/hmi-demo/template/iwg20m-g1n/local.conf
+++ b/meta-rzg1/hmi-demo/template/iwg20m-g1n/local.conf
@@ -55,10 +55,10 @@ PARALLEL_MAKE ?= "-j ${@oe.utils.cpu_count()}"
 #MACHINE ?= "edgerouter"
 #
 # This sets the default machine to be qemux86 if no other machine is selected:
-MACHINE ??= "iwg20m"
+MACHINE ??= "iwg20m-g1n"
 
 # This sets the SoC
-SOC_FAMILY = "r8a7743"
+SOC_FAMILY = "r8a7744"
 
 #
 # Where to place downloads
