Weston: Add initialization repaint-window value
This patch is to set initializaton value of Weston's repaint-window
parameter to 34, which is proved to result in better graphic
performance on RZ/G1 boards.

Signed-off-by: Hao Bui <hao.bui.yg@renesas.com>

--- a/meta-rzg1/qt-hmi-demo/recipes-graphics/weston-init/weston.ini
+++ b/meta-rzg1/qt-hmi-demo/recipes-graphics/weston-init/weston.ini
@@ -31,3 +31,6 @@ path=/home/root/launcher-taskbar/Qmlvideofx-demo.sh
 [launcher]
 icon=/home/root/launcher-taskbar/Help_icon.png
 path=/home/root/launcher-taskbar/Help.sh
+
+[core]
+repaint-window=34
