--- a/meta-rzg1/hmi-demo/recipes-graphics/weston-init/weston.ini
+++ b/meta-rzg1/hmi-demo/recipes-graphics/weston-init/weston.ini
@@ -39,3 +39,6 @@ path=/home/root/launcher-taskbar/hmi-scripts/ip_show
 [launcher]
 icon=/home/root/launcher-taskbar/hmi-icons/Exit.png
 path=/home/root/launcher-taskbar/hmi-scripts/Exit.sh
+
+[core]
+repaint-window=34
